# fairplaylab_detections

./: .gitignore  CMakeLists.txt  LICENSE  README.md
basics/: anticheat-101.md
docs/: README.md  SUMMARY.md  usermode-ext_rw_process_mem.md  usermode-overlay.md  usermode-process_handle.md
docs/.gitbook/assets/: GNsLSzda4AAeEl3.jfif
docs/basics/: anticheat-101.md  quickstart.md
docs/docs/: README.md  summary.md
docs/docs/basics/: anticheat-101.md  quickstart.md
docs/docs/usermode/: README.md  usermode-ext_rw_process_mem.md  usermode-overlay.md  usermode-process_handle.md
docs/kernel/: README.md  communication_surface.md  driver_inventory.md  process_handle_callbacks.md  process_image_thread_monitor.md
docs/usermode/: code_injection.md  external_read_write_process_memory.md  internal_read_write_memory.md  overlay_window.md  process_handle.md  thread_context_hijack.md  usermode-ext_rw_process_mem.md
kernel/: CMakeLists.txt
kernel/_shared/: client_common.h
kernel/communication_surface/: protocol.h  readme.md
kernel/communication_surface/client/: CMakeLists.txt
kernel/communication_surface/client/src/: main.cpp
kernel/communication_surface/driver/: fpl_comm_surface.c  fpl_comm_surface.inf  fpl_comm_surface.vcxproj
kernel/driver_inventory/: protocol.h  readme.md
kernel/driver_inventory/client/: CMakeLists.txt
kernel/driver_inventory/client/src/: main.cpp
kernel/driver_inventory/driver/: fpl_driver_inventory.c  fpl_driver_inventory.inf  fpl_driver_inventory.vcxproj
kernel/process_handle_callbacks/: protocol.h  readme.md
kernel/process_handle_callbacks/client/: CMakeLists.txt
kernel/process_handle_callbacks/client/src/: main.cpp
kernel/process_handle_callbacks/driver/: fpl_handle_guard.c  fpl_handle_guard.inf  fpl_handle_guard.vcxproj
kernel/process_image_thread_monitor/: protocol.h  readme.md
kernel/process_image_thread_monitor/client/: CMakeLists.txt
kernel/process_image_thread_monitor/client/src/: main.cpp
kernel/process_image_thread_monitor/driver/: fpl_process_monitor.c  fpl_process_monitor.inf  fpl_process_monitor.vcxproj
usermode/: usermode-overlay.md  usermode-process_handle.md
usermode-ext_rw_process_mem/: anticheat.cpp  cheat.cpp  game.cpp
usermode-overlay/: OverlayDemo.cpp  README.md  anticheat.cpp
usermode-process_handle/: anticheat.cpp  cheat_hijack_handle.cpp  cheat_open_handle.cpp  readme.md
usermode/code_injection/: CMakeLists.txt  readme.md
usermode/code_injection/src/: game.cpp  load_library_loader.cpp  payload.cpp  private_thread_loader.cpp
usermode/external_read_write_process_memory/: CMakeLists.txt  readme.md
usermode/external_read_write_process_memory/src/: anticheat.cpp  cheat.cpp  game.cpp
usermode/internal_read_write_memory/: CMakeLists.txt  readme.md
usermode/internal_read_write_memory/src/: cheat.cpp  game.cpp  loader.cpp
usermode/overlay_window/: CMakeLists.txt  readme.md
usermode/overlay_window/src/: anticheat.cpp  cheat.cpp
usermode/process_handle/: CMakeLists.txt  readme.md
usermode/process_handle/src/: anticheat.cpp  cheat_hijack_handle.cpp  cheat_open_handle.cpp
usermode/thread_context_hijack/: CMakeLists.txt  readme.md
usermode/thread_context_hijack/src/: game.cpp  hijacker.cpp
