cmake_minimum_required(VERSION 3.20)

project(usermode_external_read_write_process_memory LANGUAGES CXX)

add_executable(fpl_external_memory_game src/game.cpp)
target_compile_features(fpl_external_memory_game PRIVATE cxx_std_17)
target_compile_definitions(fpl_external_memory_game PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
set_target_properties(fpl_external_memory_game PROPERTIES OUTPUT_NAME game)

add_executable(fpl_external_memory_cheat src/cheat.cpp)
target_compile_features(fpl_external_memory_cheat PRIVATE cxx_std_17)
target_compile_definitions(fpl_external_memory_cheat PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
set_target_properties(fpl_external_memory_cheat PROPERTIES OUTPUT_NAME cheat)

add_executable(fpl_external_memory_anticheat src/anticheat.cpp)
target_compile_features(fpl_external_memory_anticheat PRIVATE cxx_std_17)
target_compile_definitions(fpl_external_memory_anticheat PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
set_target_properties(fpl_external_memory_anticheat PROPERTIES OUTPUT_NAME anticheat)
