cmake_minimum_required(VERSION 3.20)

project(communication_surface_client LANGUAGES CXX)

add_executable(fpl_communication_surface_client src/main.cpp)
target_compile_features(fpl_communication_surface_client PRIVATE cxx_std_17)
target_compile_definitions(fpl_communication_surface_client PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
target_include_directories(fpl_communication_surface_client PRIVATE ../../_shared)
set_target_properties(fpl_communication_surface_client PROPERTIES OUTPUT_NAME communication_surface_client)
