cmake_minimum_required(VERSION 3.20)

project(driver_inventory_client LANGUAGES CXX)

add_executable(fpl_driver_inventory_client src/main.cpp)
target_compile_features(fpl_driver_inventory_client PRIVATE cxx_std_17)
target_compile_definitions(fpl_driver_inventory_client PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
target_include_directories(fpl_driver_inventory_client PRIVATE ../../_shared)
set_target_properties(fpl_driver_inventory_client PROPERTIES OUTPUT_NAME driver_inventory_client)
